--- a/appAMST_lab6/settings.gradle
+++ b/appAMST_lab6/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "appAMST_lab2_firebase"
+rootProject.name = "appAMST_lab6_G1"
 include ':app'
